[project]
name = "bluesky-nats"
description = "NATS JetStream connectivity for Bluesky"
authors = [{ name = "Niko Kivel", email = "niko.kivel@lightsource.ca" }]
maintainers = [
    { name = "Canadian Lightsource Inc.", email = "niko.kivel@lightsource.ca" },
]

readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.11,<3.15"

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

dynamic = ["version"]

dependencies = ["bluesky>=1.14.0", "nats-py>=2.14.0", "ormsgpack>=1.12.0"]

[project.urls]
GitHub = "https://github.com/Canadian-Light-Source/bluesky-nats"

[project.optional-dependencies]
examples = ["matplotlib>=3.9.2", "ophyd>=1.9.0"]

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "hypothesis>=6.112.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.15.3",
    "toml>=0.10.2",
]

[tool.uv]
managed = true

[tool.pyright]
pythonVersion = "3.14"
include = ["src/bluesky_nats", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "ANN003",  # Missing type annotation for `**kwargs`
    "ANN401",  # allow `Any`
    "ANN204",  # add return type None to __init__
    "D100",
    "D101",
    "D102",
    "D107",    # allow `__init__` w/o docstring
    "D203",    # empty line above class docstring
    "D212",    # multi line summary first line
    "D401",    # imparative docstring
    "ERA001",  # allow commented code
    "F541",
    "FIX",     # Line contains TODO, consider resolving the issue
    "G004",    # logging statement uses f-string
    "PTH118",  # `os.path.join()` should be replaced by `Path` with `/` operator
    "PLR0913", # Too many arguments in function definition (6 > 5)
    "T201",    # allow print
    "FA",      # allow missing  "Missing `from __future__ import annotations`, but uses XXX"
    "COM812",
    # "W503",  # Flake8 considers line-breaks before operators to be best practice, contrary to PEP 8
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.isort]
lines-after-imports = 2
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ANN",  # allow missing type annotation
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    # "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # # The below are debatable
    "PLR2004", # Magic value used in comparison, ...
    # "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true

docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
branch = true
source = ["src/bluesky_nats"]
omit = ["src/bluesky_nats/_version.py", "tests/*", ".venv/*"]

[tool.coverage.report]
omit = ["src/bluesky_nats/_version.py", "tests/*", ".venv/*"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
version.fallback-version = "0.0.0"
build.hooks.vcs.version-file = "src/bluesky_nats/_version.py"
